# latticehelper

./: .gitignore  LICENSE  README.md  build.sh  devkit.go  go.mod  go.sum  latticehelper.go  main.go  makefile  polymatrix.go  polyproxy.go  polyvector.go  pqdevkit.go  pqdevkit.i  utils.go
old/: makefile  pqdevkit.i
old/pqdevkit/: .clang-format
old/pqdevkit/include/: poly_matrix.hpp  poly_proxy.hpp  poly_vector.hpp  pqdevkit.hpp
old/pqdevkit/src/: poly_matrix.cpp  poly_proxy.cpp
poly/: poly.go  polyQ.go  polyQ_test.go  poly_test.go  polynomial.go  polyproxy.go  utils.go
poly/matrix/: polyQmatrix.go  polymatrix.go  polynomialmatrix.go  polynomialmatrix_test.go  polyproxymatrix.go  polyproxymatrix_test.go  utils.go
poly/vector/: polyQvector.go  polynomialvector.go  polynomialvector_test.go  polyproxyvector.go  polyproxyvector_test.go  polyvector.go
polyproxy/: polyproxy.go  utils.go
polyvector/: polyvector.go
pqdevkit/: CMakeLists.txt  makefile
pqdevkit/include/: init.h  make_unique.hpp  params.h  params.hpp  poly_matrix.hpp  poly_proxy.hpp  poly_vector.hpp  pqdevkit.hpp  pqdevkit_math_lib.hpp
pqdevkit/src/: init.cpp  main.cpp  poly_matrix.cpp  poly_proxy.cpp  poly_vector.cpp  pqdevkit_math_lib.cpp
